[gd_scene load_steps=24 format=4 uid="uid://cvv4x8qwe5f6q"]

[ext_resource type="Texture2D" uid="uid://uuikp4w6oskh" path="res://graphics/Walls.png" id="1_7pp33"]
[ext_resource type="Script" path="res://scripts/level_1.gd" id="1_uajtg"]
[ext_resource type="PackedScene" uid="uid://cx63uh8hylrqc" path="res://scenes/computers.tscn" id="2_6k3j0"]
[ext_resource type="PackedScene" uid="uid://ca6qo8ghvov8u" path="res://scenes/door_inside.tscn" id="3_ohg7i"]
[ext_resource type="PackedScene" uid="uid://dpxphmuvxv2ys" path="res://scenes/vending_machine.tscn" id="4_2irn8"]
[ext_resource type="PackedScene" uid="uid://cu21mqf14pmgi" path="res://scenes/Enemy.tscn" id="5_f1uws"]
[ext_resource type="PackedScene" uid="uid://05dpq3ap104a" path="res://scenes/teo_snorbest.tscn" id="6_0n7t3"]
[ext_resource type="Script" path="res://scripts/vending_machine.gd" id="7_xfm2d"]
[ext_resource type="Script" path="res://scripts/door_level_2.gd" id="8_gsc4y"]
[ext_resource type="PackedScene" uid="uid://cpwsn6wvb4t6q" path="res://UI/KillsLabel.tscn" id="9_gepuu"]
[ext_resource type="AudioStream" uid="uid://u5tmbspl160g" path="res://sounds/NextLevel.wav" id="10_ylpn4"]
[ext_resource type="PackedScene" uid="uid://bjsfhygy73s3y" path="res://UI/controlCoin.tscn" id="11_e56kn"]
[ext_resource type="PackedScene" uid="uid://ebt58f7ocsbq" path="res://UI/paused_menu.tscn" id="11_o348y"]
[ext_resource type="PackedScene" uid="uid://cq11s2dy5dru0" path="res://UI/heal_menu.tscn" id="12_8dah1"]
[ext_resource type="PackedScene" uid="uid://caevj2k7wjup8" path="res://UI/die_menu.tscn" id="13_v8dka"]
[ext_resource type="AudioStream" uid="uid://dfefdkrplbnrx" path="res://sounds/Levels.wav" id="16_xwgab"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_cbhb2"]
texture = ExtResource("1_7pp33")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 16, -16, -16, 16, -16, 16, 16)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 16, -16, -16, 16, -16, 16, 16)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 16, -16, -16, 16, -16, 16, 16)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 16, -16, -16, 16, -16, 16, 16)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 16, -16, -16, 16, -16, 16, 16)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 16, -16, -16, 16, -16, 16, 16)
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 16, -16, -16, 16, -16, 16, 16)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 16, -16, -16, 16, -16, 16, 16)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 16, -16, -16, 16, -16, 16, 16)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 16, -16, -16, 16, -16, 16, 16)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 16, -16, -16, 16, -16, 16, 16)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 16, -16, -16, 16, -16, 16, 16)
6:1/0 = 0
7:1/0 = 0
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 16, -16, -16, -9.625, -16, -9.625, 16)
1:2/0 = 0
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(16, 16, 16, -16, 9.625, -16, 9.625, 16)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 16, -16, -16, -9.125, -16, -9.375, 16)
4:2/0 = 0
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(16, 16, 16, -16, 9.125, -16, 9.375, 16)
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 16, -16, -16, -9.625, -16, -9.375, 10.25, 16, 10.25, 16, 16)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 16, -16, 10.5, 16, 10.25, 16, 16)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(16, 16, 16, -16, 9.625, -16, 9.375, 10.25, -16, 10.25, -16, 16)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(16, 16, 16, 9.54594, -8.75044, 9.54594, -8.92722, -16, -16, -16, -16, 16)
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(16, 16, 16, 9.54594, -16, 9.75, -16, 16)
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 16, -16, 9.54594, 8.75044, 9.54594, 8.92722, -16, 16, -16, 16, 16)
6:3/0 = 0
7:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0

[sub_resource type="TileSet" id="TileSet_alnrb"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_cbhb2")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fvb26"]
size = Vector2(62, 52.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_dcn6a"]
radius = 47.8539

[sub_resource type="Animation" id="Animation_2e671"]
resource_name = "way"
length = 0.4
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 0, 0.290196), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_vqypc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a5pgj"]
_data = {
"RESET": SubResource("Animation_vqypc"),
"way": SubResource("Animation_2e671")
}

[node name="Level_1" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_uajtg")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAABAAAAAAABAAAAAAACAAAAAAABAAAAAAADAAAAAAABAAAAAAAEAAAAAAABAAAAAAAFAAAAAAABAAAAAAAGAAAAAAABAAAAAAAHAAAAAAABAAAAAAAIAAAAAAABAAAAAAAJAAAAAAABAAAAAAAAAAAAAAAAAAAAAAAAAAEAAAAAAAEAAAABAAEAAAABAAEAAAACAAEAAAABAAEAAAADAAEAAAABAAEAAAAEAAEAAAABAAEAAAAFAAEAAAABAAEAAAAGAAEAAAABAAEAAAAHAAEAAAABAAEAAAAIAAEAAAABAAEAAAAJAAEAAAABAAEAAAAAAAIAAAAAAAIAAAAAAAMAAAAAAAIAAAAAAAQAAAAAAAIAAAAAAAUAAAAAAAIAAAAAAAYAAAAAAAIAAAABAAIAAAABAAIAAAACAAIAAAABAAIAAAADAAIAAAABAAIAAAAEAAIAAAABAAIAAAAFAAIAAAABAAIAAAAGAAIAAAABAAIAAAAHAAIAAAABAAIAAAAIAAIAAAABAAIAAAAJAAIAAAABAAIAAAAJAAMAAAABAAIAAAAIAAMAAAABAAIAAAAHAAMAAAABAAIAAAAGAAMAAAABAAIAAAAFAAMAAAABAAIAAAAFAAQAAAABAAIAAAAEAAQAAAABAAIAAAADAAMAAAABAAIAAAACAAMAAAABAAIAAAAEAAMAAAABAAIAAAABAAMAAAABAAIAAAABAAQAAAABAAIAAAACAAQAAAABAAIAAAADAAQAAAABAAIAAAAGAAQAAAABAAIAAAAHAAQAAAABAAIAAAAIAAQAAAABAAIAAAAIAAUAAAABAAIAAAAJAAUAAAABAAIAAAAJAAQAAAABAAIAAAAGAAUAAAABAAIAAAAFAAUAAAABAAIAAAAEAAUAAAABAAIAAAADAAUAAAABAAIAAAACAAUAAAABAAIAAAABAAUAAAABAAIAAAABAAYAAAABAAIAAAACAAYAAAABAAIAAAAHAAUAAAABAAIAAAAFAAYAAAABAAIAAAAEAAYAAAABAAIAAAADAAYAAAABAAIAAAAGAAYAAAABAAIAAAAHAAYAAAABAAIAAAAIAAYAAAABAAIAAAAJAAYAAAABAAIAAAABAAcAAAABAAIAAAACAAcAAAABAAIAAAADAAcAAAABAAIAAAAEAAcAAAABAAIAAAAFAAcAAAABAAIAAAAGAAcAAAABAAIAAAAHAAcAAAABAAIAAAAIAAcAAAABAAIAAAAJAAcAAAABAAIAAAAAAAcAAAAAAAIAAAAAAAgAAAAAAAIAAAAAAAkAAAAAAAIAAAAAAAoAAAAAAAIAAAAAAAsAAAAAAAIAAAABAAgAAAABAAIAAAACAAgAAAABAAIAAAADAAgAAAABAAIAAAAEAAgAAAABAAIAAAAFAAgAAAABAAIAAAAGAAgAAAABAAIAAAAHAAgAAAABAAIAAAAIAAgAAAABAAIAAAAJAAgAAAABAAIAAAAJAAkAAAABAAIAAAAIAAkAAAABAAIAAAAHAAkAAAABAAIAAAAGAAkAAAABAAIAAAAFAAkAAAABAAIAAAAFAAoAAAABAAIAAAAEAAoAAAABAAIAAAADAAoAAAABAAIAAAACAAoAAAABAAIAAAABAAoAAAABAAIAAAABAAkAAAABAAIAAAACAAkAAAABAAIAAAADAAkAAAABAAIAAAAEAAkAAAABAAIAAAAGAAoAAAABAAIAAAAHAAoAAAABAAIAAAAIAAoAAAABAAIAAAABAAsAAAABAAIAAAACAAsAAAABAAIAAAAJAAoAAAABAAIAAAAIAAsAAAABAAIAAAAHAAsAAAABAAIAAAAGAAsAAAABAAIAAAAFAAsAAAABAAIAAAAEAAsAAAABAAIAAAADAAsAAAABAAIAAAAJAAsAAAABAAIAAAABAAwAAAABAAMAAAACAAwAAAABAAMAAAADAAwAAAABAAMAAAAEAAwAAAABAAMAAAAFAAwAAAABAAMAAAAGAAwAAAABAAMAAAAHAAwAAAABAAMAAAAIAAwAAAABAAMAAAAJAAwAAAABAAMAAAAAAAwAAAAAAAMAAAAKAAwAAAABAAMAAAALAAwAAAABAAMAAAAMAAwAAAABAAMAAAANAAwAAAABAAMAAAAOAAwAAAABAAMAAAAPAAwAAAABAAMAAAAQAAwAAAABAAMAAAARAAwAAAACAAMAAAARAAcAAAACAAIAAAARAAgAAAACAAIAAAARAAkAAAACAAIAAAARAAoAAAACAAIAAAARAAsAAAACAAIAAAAQAAsAAAABAAIAAAAQAAoAAAABAAIAAAAQAAkAAAABAAIAAAAQAAgAAAABAAIAAAAQAAcAAAABAAIAAAAPAAcAAAABAAIAAAAOAAcAAAABAAIAAAANAAcAAAABAAIAAAAMAAcAAAABAAIAAAALAAcAAAABAAIAAAALAAgAAAABAAIAAAAKAAgAAAABAAIAAAAKAAcAAAABAAIAAAANAAgAAAABAAIAAAAOAAgAAAABAAIAAAAOAAkAAAABAAIAAAAPAAkAAAABAAIAAAAMAAgAAAABAAIAAAAPAAgAAAABAAIAAAANAAkAAAABAAIAAAAMAAkAAAABAAIAAAALAAkAAAABAAIAAAAKAAkAAAABAAIAAAAKAAoAAAABAAIAAAALAAoAAAABAAIAAAAPAAoAAAABAAIAAAAPAAsAAAABAAIAAAAOAAsAAAABAAIAAAANAAsAAAABAAIAAAAMAAsAAAABAAIAAAALAAsAAAABAAIAAAAKAAsAAAABAAIAAAAMAAoAAAABAAIAAAANAAoAAAABAAIAAAAOAAoAAAABAAIAAAAKAAMAAAABAAIAAAALAAMAAAABAAIAAAAMAAMAAAABAAIAAAANAAMAAAABAAIAAAAOAAMAAAABAAIAAAAOAAQAAAABAAIAAAAPAAQAAAABAAIAAAAPAAMAAAABAAIAAAAQAAMAAAABAAIAAAAQAAQAAAABAAIAAAAQAAUAAAABAAIAAAAPAAUAAAABAAIAAAAPAAYAAAABAAIAAAAQAAYAAAABAAIAAAAOAAYAAAABAAIAAAANAAYAAAABAAIAAAAMAAYAAAABAAIAAAALAAYAAAABAAIAAAAKAAYAAAABAAIAAAAKAAUAAAABAAIAAAALAAUAAAABAAIAAAAMAAUAAAABAAIAAAANAAUAAAABAAIAAAAOAAUAAAABAAIAAAANAAQAAAABAAIAAAAMAAQAAAABAAIAAAALAAQAAAABAAIAAAAKAAQAAAABAAIAAAARAAQAAAACAAIAAAARAAUAAAACAAIAAAARAAYAAAACAAIAAAARAAIAAAACAAIAAAARAAAAAAACAAAAAAARAAEAAAACAAEAAAAQAAEAAAABAAEAAAAPAAEAAAABAAEAAAAOAAEAAAABAAEAAAANAAEAAAABAAEAAAAMAAEAAAABAAEAAAALAAEAAAABAAEAAAALAAIAAAABAAIAAAAKAAEAAAABAAEAAAAKAAAAAAABAAAAAAALAAAAAAABAAAAAAAMAAAAAAABAAAAAAANAAAAAAABAAAAAAAOAAAAAAABAAAAAAAPAAAAAAABAAAAAAAQAAAAAAABAAAAAAAKAAIAAAABAAIAAAAMAAIAAAABAAIAAAANAAIAAAABAAIAAAAOAAIAAAABAAIAAAAPAAIAAAABAAIAAAAQAAIAAAABAAIAAAARAAMAAAACAAIAAAA=")
tile_set = SubResource("TileSet_alnrb")

[node name="Enemy" parent="." groups=["enemy"] instance=ExtResource("5_f1uws")]
position = Vector2(56, 117)

[node name="Enemy2" parent="." groups=["enemy"] instance=ExtResource("5_f1uws")]
position = Vector2(52, 273)

[node name="Enemy3" parent="." groups=["enemy"] instance=ExtResource("5_f1uws")]
position = Vector2(406, 167)

[node name="Enemy4" parent="." groups=["enemy"] instance=ExtResource("5_f1uws")]
position = Vector2(225, 402)

[node name="Walls" type="StaticBody2D" parent="."]
collision_layer = 3

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Walls"]
polygon = PackedVector2Array(575, 415, 571, 412, 4, 412, 4, 64, 571, 64, 571, 412, 576, 416, 576, 0, 0, 0, 0, 416, 576, 416)

[node name="Computers" parent="." instance=ExtResource("2_6k3j0")]
position = Vector2(189, 168)
collision_layer = 3

[node name="Computers2" parent="." instance=ExtResource("2_6k3j0")]
position = Vector2(189, 313)
collision_layer = 3

[node name="Door_inside" parent="." instance=ExtResource("3_ohg7i")]
position = Vector2(576, 334)

[node name="Door_inside2" parent="." instance=ExtResource("3_ohg7i")]
position = Vector2(576, 110)

[node name="Teo_Snorbest" parent="." instance=ExtResource("6_0n7t3")]
position = Vector2(535, 273)

[node name="Camera2D2" type="Camera2D" parent="Teo_Snorbest"]
zoom = Vector2(2, 2)
limit_left = 0
limit_top = 0
limit_right = 576
limit_bottom = 416
position_smoothing_enabled = true
rotation_smoothing_enabled = true
rotation_smoothing_speed = 1.0

[node name="Vending_machine" parent="." instance=ExtResource("4_2irn8")]
position = Vector2(448, 48)
collision_layer = 3

[node name="Area2D" type="Area2D" parent="Vending_machine"]
script = ExtResource("7_xfm2d")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Vending_machine/Area2D"]
position = Vector2(0, 46.75)
shape = SubResource("RectangleShape2D_fvb26")

[node name="marker_level1" type="Marker2D" parent="."]
position = Vector2(535, 376)

[node name="start_spawn_player_point" type="Marker2D" parent="."]
position = Vector2(538, 315)

[node name="Door_to_Level2" type="Node" parent="."]

[node name="doorLevel2" type="Area2D" parent="Door_to_Level2"]
position = Vector2(449, -10)
script = ExtResource("8_gsc4y")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door_to_Level2/doorLevel2"]
position = Vector2(125, 118)
shape = SubResource("CircleShape2D_dcn6a")

[node name="doorAudio" type="AudioStreamPlayer2D" parent="Door_to_Level2/doorLevel2"]
stream = ExtResource("10_ylpn4")

[node name="ColorRect" type="ColorRect" parent="Door_to_Level2"]
offset_left = 570.0
offset_top = 81.0
offset_right = 581.0
offset_bottom = 142.0
color = Color(1, 1, 1, 0)

[node name="AnimationWay" type="AnimationPlayer" parent="Door_to_Level2"]
libraries = {
"": SubResource("AnimationLibrary_a5pgj")
}

[node name="Label_kills" type="CanvasLayer" parent="."]

[node name="KilledBar" parent="Label_kills" instance=ExtResource("9_gepuu")]
anchors_preset = -1
anchor_left = -0.100694
anchor_right = -0.100694
anchor_bottom = 0.0123457
offset_left = 115.999
offset_right = 292.999
metadata/_edit_use_anchors_ = true

[node name="Label_coins" type="CanvasLayer" parent="."]

[node name="CoinsBar" parent="Label_coins" instance=ExtResource("11_e56kn")]

[node name="menu" type="CanvasLayer" parent="."]

[node name="PausedMenu" parent="menu" instance=ExtResource("11_o348y")]
visible = false

[node name="HealMenu" type="CanvasLayer" parent="."]

[node name="heal_menu2" parent="HealMenu" instance=ExtResource("12_8dah1")]

[node name="DiedMenu" type="CanvasLayer" parent="."]

[node name="DieMenu" parent="DiedMenu" instance=ExtResource("13_v8dka")]
visible = false

[node name="levelAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("16_xwgab")
volume_db = -20.0

[connection signal="body_entered" from="Vending_machine/Area2D" to="Vending_machine/Area2D" method="_on_body_entered"]
[connection signal="body_exited" from="Vending_machine/Area2D" to="Vending_machine/Area2D" method="_on_body_exited"]
[connection signal="body_entered" from="Door_to_Level2/doorLevel2" to="Door_to_Level2/doorLevel2" method="_on_body_entered"]
[connection signal="body_exited" from="Door_to_Level2/doorLevel2" to="Door_to_Level2/doorLevel2" method="_on_body_exited"]
[connection signal="finished" from="levelAudio" to="." method="_on_level_audio_finished"]

[editable path="Label_coins/CoinsBar"]
